--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "eslint-config-airbnb": "^16.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cheerio": "^0.6.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-jsbeautifier": "^2.0.4",
     "gulp-pug": "^3.3.0",
+    "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-streamify": "^1.0.2",
