--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-watch": "^4.3.11",
     "postcss": "^6.0.14",
     "postcss-cli": "^4.1.1",
+    "pugify": "^2.2.0",
     "stylelint": "^8.3.1",
     "stylelint-config-recommended": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
@@ -66,6 +67,7 @@
   },
   "browserify": {
     "transform": [
+      "pugify",
       "browserify-shim",
       [
         "babelify",
